--- a/requirements.yml
+++ b/requirements.yml
@@ -1,7 +1,7 @@
 ---
-- name: install mariadb role
+- name: geerlingguy.mysql
   src: https://github.com/geerlingguy/ansible-role-mysql
   version: 3.1.0
 
-- name: install nginx role
+- name: hispanico.nginx-revproxy
   src: https://github.com/hispanico/ansible-nginx-revproxy
