--- a/vars.yml
+++ b/vars.yml
@@ -14,7 +14,7 @@ mysql_bind_address: '127.0.0.1'
 mysql_packages:
   - mariadb-client
   - mariadb-server
-  - python-mysqldb
+  - mariadb-common
 mysql_datadir: /var/lib/mysql
 
 #nginx reverse proxy
