--- a/vars.yml
+++ b/vars.yml
@@ -31,4 +31,7 @@ nginx_revproxy_sites:
     ssl: true                                                 
     letsencrypt: true                                       
     letsencrypt_email: "none@none.com"                        
-nginx_revproxy_certbot_auto: true                             
+nginx_revproxy_certbot_auto: true
+nginx_revproxy_certbot_packages:
+  - certbot
+  - python3-certbot-nginx
