add old jar remover

--- a/roles/streama/tasks/main.yml
+++ b/roles/streama/tasks/main.yml
@@ -12,6 +12,11 @@
     group: root
     mode: '0777'
 
+- name: Remove old jar if exists
+  file:
+    path: /opt/streama.jar
+    state: absent
+
 - name: Untar the archives
   shell: cat /opt/streama.tar.gz.* | tar xzvf - -C /opt
 
