--- a/requirements.yml
+++ b/requirements.yml
@@ -5,3 +5,6 @@
 
 - name: hispanico.nginx-revproxy
   src: https://github.com/hispanico/ansible-nginx-revproxy
+
+- name: ansible-role-automysqlbackup
+  src: https://github.com/guisea/ansible-role-automysqlbackup
