--- a/roles/ansible-role-automysqlbackup/tasks/main.yml
+++ b/roles/ansible-role-automysqlbackup/tasks/main.yml
@@ -16,6 +16,8 @@
 
 - name: install postfix
   shell: debconf-set-selections <<< "postfix postfix/mailname string your.hostname.com" && debconf-set-selections <<< "postfix postfix/main_mailer_type string 'Internet Site'" && apt-get install --assume-yes postfix
+  args:
+    executable: /bin/bash
 
 - name: Install automysqlbackup
   package:
