--- a/vars.yml
+++ b/vars.yml
@@ -40,34 +40,8 @@ nginx_revproxy_certbot_packages:
   - python3-certbot-nginx
 
 ########## automysqlbackup ###########
-automysqlbackup_cron:
-  minute: 30
-  hour: 19
-  day: "*"
-  month: "*"
-  weekday: "*"
-# Setup postbackup - example: rsync backups to another host.
-automysqlbackup_postbackup: true
-automysqlbackup_postbackup_file: /etc/mysql-backup-post
-automysqlbackup_postbackup_content: |
+backup_database_script: |
   #!/bin/bash
-  b2 authorize-account {{ b2AppKeyIdBackup }} {{ b2AppKeyBackup }}
-  b2 sync /var/lib/automysqlbackup b2://devbucket735/database_baks/
-# Above line configures post mysql backup na_ontap_svm_options
-# Do you wish to encrypt your backups using openssl?
-automysqlbackup_encrypt: "yes"
-# Choose a password to encrypt the backups.
-automysqlbackup_encrypt_password: "{{ db_root_pass }}"
-# backup each database in a separate directory or everything to a single file
-automysqlbackup_sepdir: 'no'
-# day of the week for weekly backups (1 to 7 where 1 is Monday)
-# Set to 0 to disable weekly backups.
-automysqlbackup_doweekly: 0
-automysqlbackup_domonthly: 0
-# Set rotation of daily backups. VALUE*24hours
-# If you want to keep only today's backups, you could choose 1, i.e. everything older than 24hours will be removed.
-automysqlbackup_rotationdaily: 6
-automysqlbackup_rotationweekly: 0
-automysqlbackup_rotationmonthly: 0
-# whether to include a create database statement
-automysqlbackup_createdb_stmt: 'yes'
+  /usr/bin/mysqldump --all-databases --add-drop-database > /opt/dbbackup/backup.sql
+  /usr/local/bin/b2 authorize-account {{ b2AppKeyIdBackup }} {{ b2AppKeyBackup }}
+  /usr/local/bin/b2 sync /opt/dbbackup b2://devbucket735/database_baks/
