--- a/vars.yml
+++ b/vars.yml
@@ -44,4 +44,4 @@ backup_database_script: |
   #!/bin/bash
   /usr/bin/mysqldump --all-databases --add-drop-database > /opt/dbbackup/backup.sql
   /usr/local/bin/b2 authorize-account {{ b2AppKeyIdBackup }} {{ b2AppKeyBackup }}
-  /usr/local/bin/b2 sync /opt/dbbackup b2://devbucket735/database_baks/
+  /usr/local/bin/b2 sync /opt/dbbackup b2://dbbucket
