change nginx ansible code

--- a/main.yml
+++ b/main.yml
@@ -9,4 +9,4 @@
     - role: backup_and_automation
     - role: firewall
     - role: streama
-    - role: hispanico.nginx-revproxy
+    - role: ansible-nginx-revproxy
