--- a/vars.yml
+++ b/vars.yml
@@ -34,7 +34,7 @@ nginx_revproxy_sites:
       - { backend_address: 127.0.0.1, backend_port: 8080 }
     ssl: true                                                 
     letsencrypt: true                                   
-    nginx_location: /app    
+    nginx_location: /app/
     letsencrypt_email: "none@none.com"                        
 nginx_revproxy_certbot_auto: true
 nginx_revproxy_certbot_packages:
