--- a/requirements.yml
+++ b/requirements.yml
@@ -2,3 +2,6 @@
 - name: geerlingguy.mysql
   src: https://github.com/geerlingguy/ansible-role-mysql
   version: 3.1.0
+
+- name: hispanico.nginx-revproxy
+  src: https://github.com/hispanico/ansible-nginx-revproxy
