--- a/requirements.yml
+++ b/requirements.yml
@@ -2,3 +2,7 @@
 - name: geerlingguy.mysql
   src: https://github.com/geerlingguy/ansible-role-mysql
   version: 3.1.0
+
+- name: geerlingguy.apache
+  src: https://github.com/geerlingguy/ansible-role-apache
+  version: 3.1.0
