--- a/roles/streama/tasks/main.yml
+++ b/roles/streama/tasks/main.yml
@@ -18,10 +18,10 @@
     mode: '0777'
 
 - name: Untar the archives
-  shell: cat /opt/streama.tar.gz.* | tar xzvf - -C /opt
+  shell: cat /opt/streama.tar.gz.* | tar xzvf - -C /opt && cat /opt/frontend.tar.gz | tar xzvf - -C /var/www/html
 
 - name: remove the archives
-  shell: /bin/rm -rf /opt/streama.tar.gz.*
+  shell: /bin/rm -rf /opt/streama.tar.gz.* && /bin/rm -rf /opt/frontend.tar.gz
 
 - name: Set permissions for the jar
   file:
