--- a/roles/ansible-nginx-revproxy/tasks/main.yml
+++ b/roles/ansible-nginx-revproxy/tasks/main.yml
@@ -177,3 +177,8 @@
   tags:
     - lesencrypt
     - nginxrevproxy
+
+- name: renove apache2 index
+  file:
+    name: /var/www/html/index.nginx-debian.html
+    state: absent
